# agentforge

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  THREAT_MODEL.md  USERS.md  defense-deck.html  orientation.html  pyproject.toml  railway.json  whiteboard.html
agentforge/: __init__.py  config.py  graph.py  integration.py  live_run.py  orchestrator.py  perf.py  runtime.py
contracts/: README.md
docs/: AGENT_INTERACTION.md  AI_COST_ANALYSIS.md  ATO_EVIDENCE_PACKET.md  DECISION_RECORD.md  INTEGRATION_PACKET.md  MODEL_ASSIGNMENT.md  OBSERVABILITY.md  PERFORMANCE.md  REVIEW_FIXES_APPLIED.md  TRIAGE.md  VERDICT_BOUNDARIES.md  VULN_REPORT_TEMPLATE.md
evals/: README.md  case.template.json
tests/: _contract_ids.py  conftest.py  test_allowlist.py  test_baseline_comparator.py  test_common.py  test_config.py  test_console_documentation.py  test_console_mutation_provenance.py  test_console_orchestrator_delegation.py  test_console_resilience.py  test_contracts_api.py  test_deterministic_judge.py  test_directive.py  test_doc_caching.py  test_documentation_agent.py  test_errors.py  test_eval_accuracy.py  test_eval_persist.py  test_eval_runner.py  test_eval_suite.py  test_evals_corpus_expansion.py  test_evals_generate.py  test_graph.py  test_integration_e2e.py  test_integration_orchestrator_store.py  test_judge_base.py  test_judge_integration.py  test_judge_semantic_replay.py  test_kimi_client.py  test_live_run.py  test_observability_cost.py  test_observability_metrics.py  test_observability_trace.py  test_oracle_phi.py  (+23 more)
(+65 files in other folders)
